--- a/css/all.css
+++ b/css/all.css
@@ -54,6 +54,12 @@ a i {
   font-size: 15px;
 }
 
+/*!
+ * Bootstrap v5.0.1 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -10380,6 +10386,27 @@ fieldset:disabled .btn {
 
 .header {
   padding: 0 40px;
+  transition: all 0.5s;
+}
+
+.header.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  z-index: 100;
+  padding: 13px;
+  height: 70px;
+}
+
+.header__stickynav-logo {
+  display: none;
+}
+
+.header__stickynav-logo.sticky {
+  display: block;
+  width: 120px;
 }
 
 .header__weather-city {
@@ -10413,6 +10440,10 @@ fieldset:disabled .btn {
 .header__logo {
   height: 110px;
   width: 110px;
+}
+
+.header__logo.sticky {
+  display: none;
 }
 
 .header__logo-small {
